tests/fail/stable/invalid_custom_regex.stderr
error: unknown format option starting with 'g'.
       Use 'b', 'o', 'x' or 'r' for number format options, '/' for regex, or '[' for custom format options:
       At "{://g}"
               ^
 --> tests/fail/stable/invalid_custom_regex.rs:2:25
  |
2 |     sscanf::sscanf!("", "{://g}", str);
  |                         ^^^^^^^^

error: missing '/' to close the regex option:
       At "{:/}"
             ^^
 --> tests/fail/stable/invalid_custom_regex.rs:3:25
  |
3 |     sscanf::sscanf!("", "{:/}", str);
  |                         ^^^^^^

error: missing '/' to close the regex option:
       At "{:/"
             ^
 --> tests/fail/stable/invalid_custom_regex.rs:4:25
  |
4 |     sscanf::sscanf!("", "{:/", str);
  |                         ^^^^^

error: missing '/' to close the regex option:
       At r"{:/\"
              ^^
 --> tests/fail/stable/invalid_custom_regex.rs:6:25
  |
6 |     sscanf::sscanf!("", r"{:/\", str);
  |                         ^^^^^^^

error: missing '/' to close the regex option:
       At "{:/\\"
             ^^^
 --> tests/fail/stable/invalid_custom_regex.rs:7:25
  |
7 |     sscanf::sscanf!("", "{:/\\", str);
  |                         ^^^^^^^

error: missing '/' to close the regex option:
       At r"{:/\/"
              ^^^
 --> tests/fail/stable/invalid_custom_regex.rs:8:25
  |
8 |     sscanf::sscanf!("", r"{:/\/", str);
  |                         ^^^^^^^^

error: missing '}' to close a placeholder. If the '{' was intended to be a literal, escape it with '{{':
       At "{:/\\/"
           ^^^^^^
 --> tests/fail/stable/invalid_custom_regex.rs:9:25
  |
9 |     sscanf::sscanf!("", "{:/\\/", str);
  |                         ^^^^^^^^
